--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -46,9 +48,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0"
   }
 }
